Revision history for {{$dist->name}}

{{$NEXT}}
  - Allow maint/run- in addition to inc/run/

2.29      2018-12-05 16:36:31 -0500
  - Update warnings about versions
  - Add support for PLICEASE_DZIL_NO_GIT

2.28      2018-08-30 14:51:50 -0400
  - Require plicease plugins 2.28

2.27      2018-08-30 10:02:01 -0400
  - Require plicease plugins 2.27

2.26      2018-05-22 13:24:18 -0400
  - Require plicease plugins 2.26
  - Allow override of underscore_eval_version on OurPkgVersion

2.25      2017-11-29 14:49:19 -0500
  - Require plicease plugins 2.25
  - Use [Author::Plicease::NoUnsafeInc]
  - Check that PERL_USE_UNSAFE_INC is set correctly in travis.yml

2.24      2017-11-07 08:09:45 -0500
  - Require plicease plugins 2.24

2.23      2017-08-31 11:00:16 -0400
  - Migrate to EUMM from MB
  - Require plicease plugin 2.23

2.22      2017-08-23 15:11:10 -0400
  - Remove CPANFile from the bundle
  - Remove dependency on Path::Class
  - Require Perl 5.14
  - Require plicease plugin 2.22

2.21      2017-07-31 13:53:47 -0400
  - Require plicease plugin 2.21

2.20      2017-07-12 16:44:27 -0400
  - Require plicease plugin 2.20

2.19      2017-07-12 08:20:54 -0400
  - Require plicease plugin 2.19

2.18      2017-07-11 12:32:39 -0400
  - Prereq fix.

2.17      2017-07-11 05:07:07 -0400
  - [OurPkgVersion] use underscore_eval_version
  - Require plicease plugin 2.17

2.16      2017-06-22 12:59:51 -0400
  - Require plicease plugin 2.16

2.15      2017-06-11 21:41:41 -0400
  - Tweaks for Perl 5.26

2.14      2017-06-09 11:37:34 -0400
  - Require plicease plugin 2.14

2.12      2017-03-22 12:00:32 -0400
  - Require plicease plugin 2.12
  - Do not try to use Git plugins on windows

2.11      2017-01-23 14:01:04 -0500
  - Require plicease plugin 2.11

2.10      2016-10-04 12:44:17 -0400
  - Require plicease plugin 2.10

2.09      2016-07-12 08:40:39 -0400
  - Require plicease plugins 2.09

2.08      2016-07-12 08:36:33 -0400
  - Warn when travis is not testing 5.24
